--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "scripts": {
         "start": "node index.js",
-        "lint": "eslint **/*.js",
+        "lint": "eslint '**/*.js' --fix",
         "test": "jest --verbose --coverage --watch-All"
     },
     "repository": {
@@ -21,6 +21,7 @@
     "homepage": "https://github.com/401-advanced-javascript-obadaalmatrami/Lab-05-mongoose#readme",
     "dependencies": {
         "@code-fellows/supergoose": "^1.0.1",
+        "dotenv": "^8.2.0",
         "eslint": "^6.8.0",
         "jest": "^25.1.0",
         "mongoose": "^5.8.10",
